--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div id="grey">These languages are the backbone of every website, defining structure, content, and presentation.</div>
     <div id="final"><img src="image-avatar.webp"> Greg Hooper</div>
     </div>
-    <!-- <div class="attribution">
+        <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="https://www.instagram.com/the_progamter/" target="_blank">Emmanuel Ofuje Dania</a>.
-      </div>  -->
+      </div>  
 </body>
 </html>
